--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "swiper": "^11.2.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@pureadmin/utils": "^2.6.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
     "boxen": "^8.0.1",
     "code-inspector-plugin": "^0.20.7",
+    "dayjs": "^1.11.13",
     "gradient-string": "^3.0.0",
+    "less": "^4.3.0",
     "rimraf": "^6.0.1",
     "rollup-plugin-visualizer": "^5.14.0",
     "vite": "^6.2.0",
