--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+
     "swiper": "^11.2.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -26,6 +27,8 @@
     "dayjs": "^1.11.13",
     "gradient-string": "^3.0.0",
     "less": "^4.3.0",
+    "postcss": "^8.5.3",
+    "postcss-px-to-viewport-8-plugin": "^1.2.5",
     "rimraf": "^6.0.1",
     "rollup-plugin-visualizer": "^5.14.0",
     "vite": "^6.2.0",
